--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="assets/css/style.css">
         <title>Coding Pharaoh</title>
     </head>
     <boddy>
         <header>
         <!-- Navigation -->
             <h1>
-                <a href="/">Coding Pharaoh</a>
+                <a href="index.html">Coding Pharaoh</a>
             </h1>
             <nav>
                 <ul>
@@ -63,17 +64,13 @@
         <!--Contact Me section-->
         <section>
             <h2 id="Contact Me">Contact Me</h2>
-            <address>
+            <footer>
                 <span>555.555.5555</span>
                 <a href="mailto:malak.markus@outlook.com">malak.markus@outlook.com</a>
                 <a href="https://github.com/malakmarkus">GitHub</a>
                 <a href="placeholder@teittwer">Twitter</a>
                 <a href="placeholder@spotify">Spotify</a>
-            </address>
-        </section>
-        <!--Resume Section-->
-        <section>
-            <h2 id="Resume"></h2>
+            </fotter>
         </section>
     </boddy>
 </html>
