--- a/index.html
+++ b/index.html
@@ -28,49 +28,51 @@
                 </ul>
             </nav>
         </header>
-        <!--Hero section start-->
-        <section>
-            <p>Magic Starts Here</P>
-        </section>
-        <!--About Me Section-->
-        <section>
-            <h2 id="about-me">About Me</h2>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequatur eos praesentium aspernatur quo voluptatibus sunt repellat debitis. Quidem praesentium nihil dolorum quam eius modi maiores voluptatum, eum temporibus voluptatibus at!</p>
-        </section>
-        <!--Work Section-->
-        <section>
-            <h2 id="Work">Work</h2>
-            <div>
-                <h3>Surf Report</h3>
-                <p>MERN Stack</p>
-            </div>
-            <div>
-                <h3>LED Wall</h3>
-                <p>Node/loT</p>
-            </div>
-            <div>
-                <h3>Calculator</h3>
-                <p>React/JavaScript/CSS</p>
-            </div>
-            <div>
-                <h3>Pastel Puzzels</h3>
-                <p>MERN Stack</p>
-            </div>
-            <dive>
-                <h3>Run Buddy</h3>
+        <main>
+            <!--Hero section start-->
+            <section class="hero">
+                <p>Magic Starts Here</P>
+            </section>
+            <!--About Me Section-->
+            <section>
+                <h2 id="about-me">About Me</h2>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequatur eos praesentium aspernatur quo voluptatibus sunt repellat debitis. Quidem praesentium nihil dolorum quam eius modi maiores voluptatum, eum temporibus voluptatibus at!</p>
+            </section>
+            <!--Work Section-->
+            <section>
+                <h2 id="Work">Work</h2>
+                <div>
+                    <h3>Surf Report</h3>
+                    <p>MERN Stack</p>
+                </div>
+                <div>
+                    <h3>LED Wall</h3>
+                    <p>Node/loT</p>
+                </div>
+                <div>
+                    <h3>Calculator</h3>
+                    <p>React/JavaScript/CSS</p>
+                </div>
+                <div>
+                    <h3>Pastel Puzzels</h3>
+                    <p>MERN Stack</p>
+                </div>
+                <dive>
+                    <h3>Run Buddy</h3>
                 <p>HTML/CSS</p>
-            </dive>
-        </section>
-        <!--Contact Me section-->
-        <section>
-            <h2 id="Contact Me">Contact Me</h2>
-            <footer>
-                <span>555.555.5555</span>
-                <a href="mailto:malak.markus@outlook.com">malak.markus@outlook.com</a>
-                <a href="https://github.com/malakmarkus">GitHub</a>
-                <a href="placeholder@teittwer">Twitter</a>
-                <a href="placeholder@spotify">Spotify</a>
-            </fotter>
-        </section>
+                </dive>
+            </section>
+            <!--Contact Me section-->
+            <section>
+                <h2 id="Contact Me">Contact Me</h2>
+                <footer>
+                    <span>555.555.5555</span>
+                    <a href="mailto:malak.markus@outlook.com">malak.markus@outlook.com</a>
+                    <a href="https://github.com/malakmarkus">GitHub</a>
+                    <a href="placeholder@teittwer">Twitter</a>
+                    <a href="placeholder@spotify">Spotify</a>
+                </fotter>
+            </section>
+        </main>
     </boddy>
 </html>
