about me and contact me style

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <p>Magic Starts Here</P>
             </section>
             <!--About Me Section-->
-            <section>
+            <section class="about-me-contact-me">
                 <h2 id="about-me">About Me</h2>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequatur eos praesentium aspernatur quo voluptatibus sunt repellat debitis. Quidem praesentium nihil dolorum quam eius modi maiores voluptatum, eum temporibus voluptatibus at!</p>
             </section>
@@ -63,10 +63,10 @@
                 </dive>
             </section>
             <!--Contact Me section-->
-            <section>
+            <section class="about-me-contact-me">
                 <h2 id="Contact Me">Contact Me</h2>
                 <footer>
-                    <span>555.555.5555</span>
+                    <a href="555.555.5555">555.555.5555</a>
                     <a href="mailto:malak.markus@outlook.com">malak.markus@outlook.com</a>
                     <a href="https://github.com/malakmarkus">GitHub</a>
                     <a href="placeholder@teittwer">Twitter</a>
