--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="UTF-8">
+        <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="assets/css/style.css">
         <title>Coding Pharaoh</title>
     </head>
@@ -23,7 +23,7 @@
                         <a href="#contact-me">Contact Me</a>
                     </li>
                     <li>
-                        <a href="#resume">Resume</a>
+                        <a href="https://www.linkedin.com/in/Malak-Markus">Resume</a>
                     </li> 
                 </ul>
             </nav>
@@ -36,35 +36,47 @@
             <!--About Me Section-->
             <section class="about-me-contact-me">
                 <h2 id="about-me">About Me</h2>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequatur eos praesentium aspernatur quo voluptatibus sunt repellat debitis. Quidem praesentium nihil dolorum quam eius modi maiores voluptatum, eum temporibus voluptatibus at!</p>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequatur eos praesentium aspernatur quo voluptatibus sunt repellat debitis. Quidem praesentium nihil dolorum quam eius modi maiores voluptatum, eum temporibus voluptatibus at!Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequatur eos praesentium aspernatur quo voluptatibus sunt repellat debitis. Quidem praesentium nihil dolorum quam eius modi maiores voluptatum, eum temporibus voluptatibus at!</p>
             </section>
             <!--Work Section-->
-            <section>
-                <h2 id="Work">Work</h2>
-                <div>
-                    <h3>Surf Report</h3>
-                    <p>MERN Stack</p>
+            <section class="work">
+                <h2 id="work">Work</h2>
+                <div class="work-container">
+                    <div class="surf-report">
+                        <div class="surf-report-content">
+                            <h3 >Surf Report</h3>
+                            <p>MERN Stack</p>
+                        </div>
+                    </div>
+                    <div class="work-item">
+                        <div class="work-item-content">
+                            <h3>LED Wall</h3>
+                            <p>Node/loT</p>
+                        </div>
+                    </div>
+                    <div class="work-item">
+                        <div class="work-item-content">
+                            <h3>Calculator</h3>
+                            <p>React/JavaScript/CSS</p>
+                        </div>
+                    </div>
+                    <div class="work-item">
+                        <div class="work-item-content">
+                            <h3>Pastel Puzzels</h3>
+                            <p>MERN Stack</p>
+                        </div>
+                    </div>
+                    <dive class="work-item">
+                        <div class="work-item-content">
+                            <h3>Run Buddy</h3>
+                            <p>HTML/CSS</p>
+                        </div>
+                    </dive>
                 </div>
-                <div>
-                    <h3>LED Wall</h3>
-                    <p>Node/loT</p>
-                </div>
-                <div>
-                    <h3>Calculator</h3>
-                    <p>React/JavaScript/CSS</p>
-                </div>
-                <div>
-                    <h3>Pastel Puzzels</h3>
-                    <p>MERN Stack</p>
-                </div>
-                <dive>
-                    <h3>Run Buddy</h3>
-                <p>HTML/CSS</p>
-                </dive>
             </section>
             <!--Contact Me section-->
             <section class="about-me-contact-me">
-                <h2 id="Contact Me">Contact Me</h2>
+                <h2 id="contact-me">Contact Me</h2>
                 <footer>
                     <a href="555.555.5555">555.555.5555</a>
                     <a href="mailto:malak.markus@outlook.com">malak.markus@outlook.com</a>
