add media queries

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="assets/css/style.css">
         <title>Coding Pharaoh</title>
     </head>
-    <boddy>
+    <body>
         <header>
         <!-- Navigation -->
             <h1>
@@ -35,40 +35,40 @@
                 <p>Magic Starts Here</P>
             </section>
             <!--About Me Section-->
-            <section class="about-me-contact-me">
+            <section class="secondary-section">
                 <h2 id="about-me">About Me</h2>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequatur eos praesentium aspernatur quo voluptatibus sunt repellat debitis. Quidem praesentium nihil dolorum quam eius modi maiores voluptatum, eum temporibus voluptatibus at!Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequatur eos praesentium aspernatur quo voluptatibus sunt repellat debitis. Quidem praesentium nihil dolorum quam eius modi maiores voluptatum, eum temporibus voluptatibus at!</p>
             </section>
             <!--Work Section-->
-            <section class="work">
+            <section class="Primary-section">
                 <h2 id="work">Work</h2>
-                <div class="work-container">
+                <div class="Primary-section-container">
                     <div class="surf-report">
                         <div class="surf-report-content">
                             <h3 >Surf Report</h3>
                             <p>MERN Stack</p>
                         </div>
                     </div>
-                    <div class="work-item">
-                        <div class="work-item-content">
+                    <div class="Primary-section-item">
+                        <div class="Primary-section-item-content">
                             <h3>LED Wall</h3>
                             <p>Node/loT</p>
                         </div>
                     </div>
-                    <div class="work-item">
-                        <div class="work-item-content">
+                    <div class="Primary-section-item">
+                        <div class="Primary-section-item-content">
                             <h3>Calculator</h3>
                             <p>React/JavaScript/CSS</p>
                         </div>
                     </div>
-                    <div class="work-item">
-                        <div class="work-item-content">
+                    <div class="Primary-section-item">
+                        <div class="Primary-section-item-content">
                             <h3>Pastel Puzzels</h3>
                             <p>MERN Stack</p>
                         </div>
                     </div>
-                    <dive class="work-item">
-                        <div class="work-item-content">
+                    <dive class="Primary-section-item">
+                        <div class="Primary-section-item-content">
                             <h3>Run Buddy</h3>
                             <p>HTML/CSS</p>
                         </div>
@@ -76,7 +76,7 @@
                 </div>
             </section>
             <!--Contact Me section-->
-            <section class="about-me-contact-me">
+            <section class="secondary-section">
                 <h2 id="contact-me">Contact Me</h2>
                 <footer>
                     <a href="555.555.5555">555.555.5555</a>
@@ -87,5 +87,5 @@
                 </fotter>
             </section>
         </main>
-    </boddy>
+    </body>
 </html>
