--- a/index.html
+++ b/index.html
@@ -43,36 +43,36 @@
             <section class="Primary-section">
                 <h2 id="work">Work</h2>
                 <div class="Primary-section-container">
-                    <div class="surf-report">
+                    <a href="#" class="surf-report">
                         <div class="surf-report-content">
-                            <h3 >Surf Report</h3>
+                            <h3>Surf Report</h3>
                             <p>MERN Stack</p>
                         </div>
-                    </div>
-                    <div class="Primary-section-item">
+                    </a>
+                    <a href="#" class="Primary-section-item">
                         <div class="Primary-section-item-content">
                             <h3>LED Wall</h3>
                             <p>Node/loT</p>
                         </div>
-                    </div>
-                    <div class="Primary-section-item">
+                    </a>
+                    <a href="#" class="Primary-section-item">
                         <div class="Primary-section-item-content">
                             <h3>Calculator</h3>
                             <p>React/JavaScript/CSS</p>
                         </div>
-                    </div>
-                    <div class="Primary-section-item">
+                    </a>
+                    <a href="#" class="Primary-section-item">
                         <div class="Primary-section-item-content">
                             <h3>Pastel Puzzels</h3>
                             <p>MERN Stack</p>
                         </div>
-                    </div>
-                    <dive class="Primary-section-item">
+                    </a>  
+                    <a href="#" class="Primary-section-item">
                         <div class="Primary-section-item-content">
                             <h3>Run Buddy</h3>
                             <p>HTML/CSS</p>
                         </div>
-                    </dive>
+                    </a>
                 </div>
             </section>
             <!--Contact Me section-->
